<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/chalk"
        android:text="pseudo"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/chalk"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="9dp"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/chalk"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="297dp"
        android:layout_height="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/chalk"
        android:text="@string/profile_title"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_profile" />

    <TextView
        android:id="@+id/profile_nb_victory"
        android:layout_width="273dp"
        android:layout_height="94dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/chalk"
        android:text="@string/profile_victory"
        android:textColor="@color/green"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_nb_defeat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_nb_defeat"
        android:layout_width="275dp"
        android:layout_height="91dp"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/chalk"
        android:text="@string/profile_defeat"
        android:textColor="@color/red"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile_back"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/chalk"
        android:text="@string/btn_back"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

