<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_letters_tapees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:fontFamily="@font/chalk"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="99dp"
        android:fontFamily="@font/chalk"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="9dp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/chalk"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="9dp" />


    <LinearLayout
        android:id="@+id/word_container"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_pendu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/word_container"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="67dp"
        android:background="@drawable/first" />

    <LinearLayout
        android:layout_below="@+id/word_container"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="268dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/chalk"
        android:textColor="@color/white"
        android:text="@string/send" />

    <Button
        android:id="@+id/btn_game_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="158dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/chalk"
        android:text="@string/btn_back"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_letter"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="274dp"
        android:fontFamily="@font/chalk"
        android:maxLength="1"
        android:textColor="@color/white" />


</RelativeLayout>